# OpenGL_Test1

./: .gitignore  CMakeLists.txt  main.cpp
Code/: Shaders.cpp
Headers/: Settings.h  Shaders.h  Utilities.h
cmake/soil/projects/VC9/: SOIL.sln  SOIL.vcxproj  UpgradeLog.htm
cmake/soil/projects/VC9/Debug/: SOIL.idb
cmake/soil/projects/VC9/Debug/SOIL.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Lib-link.read.1.tlog  Lib-link.write.1.tlog  Lib.command.1.tlog  SOIL.lastbuildstate
